Allow Tab as being modified by Shift

Backtab was already in the list of allowed keys, but not Tab,
which happens to get queried though. In the case of bug 368581 when
walking in reverse direction of windows by pressing Alt+Shift+Tab.

BUG: 368581

Reviewers: graesslin

Differential Revision: https://phabricator.kde.org/D4141